--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,42 +1,66 @@
-
 .profile {
-  background-color: #ffffff;
-  width: 500px;
+  background-color: #a2d5c6;
+  width: 480px;
+  border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+  margin-top: 20px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.description{
-
+.avatar {
+  width: inherit;
+  border-radius: 50%;
+  padding: 8px;
+  background-color: #f1f1f1;
 }
 
 .name {
-
+  color: #5c3c92;
+  margin-top: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.01em;
 }
 
-.tag{
-
+.tag {
+  margin-top: 10px;
+  font-style: italic;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 
-.location{
-
+.location {
+  margin-top: 10px;
+  text-align: center;
 }
-
 
 .stats {
+  margin-top: 10px;
   list-style-type: none;
   display: flex;
-  column-gap: 10px;
+  justify-content: space-between;
 }
 
 .item {
   flex-basis: calc((100% - 2 * 10px) / 3);
-  border: 1px solid black
+  border: 1px solid #5c3c92;
+  border-radius: 8px;
+  padding: 10px;
 }
 
-.label{
-    margin-left: auto;
-    margin-right: auto;
+.label {
+  text-align: center;
 }
 
-.quantity{
-  
+.quantity {
+  color: #5c3c92;
 }
+
+/*use colors*/
+/*Hex code: #d72631  #a2d5c6  #077b8a  #5c3c92  */
