--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,18 +1,5 @@
-.box {
-  background-color: #a2d5c6;
-  width: 580px;
-  border-radius: 8px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 50px;
-  margin-top: 20px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.profile{
-    width: 580px;
-
+.profile {
+  padding: 20px;
 }
 
 .avatar {
@@ -61,13 +48,9 @@
   padding: 10px;
 }
 
-.label {
-  text-align: center;
-}
-
 .quantity {
   color: #5c3c92;
 }
 
 /*use colors*/
-/*Hex code: #d72631  #a2d5c6  #077b8a  #5c3c92  */
+/*Hex code:  #d72631  #a2d5c6  #077b8a  #5c3c92  #f1f1f1  */
