--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ ol {
   padding: 0;
   list-style: none;
 }
+
 img {
   display: block;
   max-width: 100%;
@@ -43,7 +44,13 @@ body {
   background-image: linear-gradient(to right, #e66465, #9198e5);
 }
 
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+.box {
+  background-color: #a2d5c6;
+  width: 580px;
+  border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
